Bug 989735 - Fixed warnings in accessible/src/generic. r=trev.saunders